--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>minha primeira página</title>
 </head>
 <body>
-    
+   <h1> um pouco sobre mim </h1> 
+   <img src="adesivo-de-cachorro-golden-retriever-bebe-em-fundo-transparente-isolado-png-logo-generative-ai_918839-9573.avif">
+   
 </body>
 </html>
