--- a/index.html
+++ b/index.html
@@ -6,8 +6,14 @@
     <title>minha primeira página</title>
 </head>
 <body>
-   <h1> um pouco sobre mim </h1> 
-   <img src="adesivo-de-cachorro-golden-retriever-bebe-em-fundo-transparente-isolado-png-logo-generative-ai_918839-9573.avif">
    
+   <header><h1 id="tituloPrincipal"> um pouco sobre mim </h1>
+    <h1>Seu nome</h1>
+<p>Sou uma pessoa <b> </b> <br> 
+</p>
+</header>
+<hr width="50%">
+<img id="imagem" src="adesivo-de-cachorro-golden-retriever-bebe-em-fundo-transparente-isolado-png-logo-generative-ai_918839-9573.avif" alt="nome da imagem">
+
 </body>
 </html>
