--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
    
    <header><h1 id="tituloPrincipal"> um pouco sobre mim </h1>
     <h1>patricia</h1>
-<p>Sou uma pessoa <b> </b> <br> 
+<p> Sou uma pessoa calma, alegre, carinhosa companheira <b> Calma </b> Companheira<br> Meu sonho é me formar em fisioterapia 
 </p>
 </header>
 <hr width="50%">
-<img id="imagem" src="adesivo-de-cachorro-golden-retriever-bebe-em-fundo-transparente-isolado-png-logo-generative-ai_918839-9573.avif" alt="nome da imagem">
+<img id="imagem" src="adesivo-de-cachorro-golden-retriever-bebe-em-fundo-transparente-isolado-png-logo-generative-ai_918839-9573.avif" alt="Imagem de um golden">
 
 </body>
 </html>
